--- a/app/src/main/res/layout/chat_box_other_person.xml
+++ b/app/src/main/res/layout/chat_box_other_person.xml
@@ -1,56 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp">
 
     <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/image_message_profile"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:background="@drawable/shape_of_view"
-        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/other_person_icon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:src="@drawable/shape_of_view" />
 
-    <TextView
-        android:id="@+id/text_message_name"
-        android:text="John Doe"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
-        app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="4dp" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/text_message_body"
-        android:text="hi man, how are you?"
-        android:background="@drawable/chat_bubble_other"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:maxWidth="240dp"
-        android:padding="8dp"
-        android:textColor="#ffffff"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@+id/text_message_name"
-        app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
-        android:layout_marginLeft="8dp" />
 
-    <TextView
-        android:id="@+id/text_message_time"
-        android:text="11:40"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="10sp"
-        app:layout_constraintLeft_toRightOf="@+id/text_message_body"
-        android:layout_marginLeft="4dp"
-        app:layout_constraintBottom_toBottomOf="@+id/text_message_body" />
+        <TextView
+            android:id="@+id/text_message_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-</android.support.constraint.ConstraintLayout>
+            android:layout_marginTop="4dp"
+            android:text="John Doe"
+            android:textSize="11sp" />
+
+        <TextView
+            android:id="@+id/other_person_message_body"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/chat_bubble_other"
+            android:maxWidth="240dp"
+            android:padding="8dp"
+            android:textSize="12sp"
+            android:text="Message"
+            android:textColor="#ffffff" />
+
+        <TextView
+            android:id="@+id/other_person_message_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:text="11:40"
+            android:textSize="10sp"
+            android:layout_gravity="end"
+            android:gravity="end"/>
+
+    </LinearLayout>
+</LinearLayout>
