--- a/app/src/main/res/layout/activities/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/activities/layout/fragment_user_profile.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/user_profile_background_white"
     android:orientation="vertical"
-    android:weightSum="100">
+    android:weightSum="100"
+    tools:context=".Fragments.UserProfileFragment">
 
     <com.github.florent37.shapeofview.shapes.ArcView
         android:layout_width="match_parent"
@@ -46,23 +47,25 @@
 
 
             <com.github.florent37.shapeofview.shapes.CircleView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_alignBottom="@id/circleView_user_profile"
-                android:layout_alignEnd="@id/circleView_user_profile"
-                android:layout_margin="1dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginBottom="139dp"
+
+                android:layout_marginEnd="126dp"
                 android:background="@android:color/white"
                 app:shape_circle_borderColor="@android:color/white"
-                app:shape_circle_borderWidth="4dp"
-
-                >
+                app:shape_circle_borderWidth="2dp">
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/primaryGreen"
-                    android:padding="15dp"
-                    android:scaleType="fitXY"
+                    android:layout_margin="2dp"
+                    android:background="@android:color/holo_red_dark"
+
+                    android:padding="4dp"
+                    android:scaleType="fitCenter"
                     android:src="@drawable/ic_edit" />
 
             </com.github.florent37.shapeofview.shapes.CircleView>
