--- a/app/src/main/res/layout/fragments/layout/fragment_welcome_screen_one.xml
+++ b/app/src/main/res/layout/fragments/layout/fragment_welcome_screen_one.xml
@@ -1,22 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical"
+    android:weightSum="120">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="80">
+
+        <com.github.florent37.shapeofview.ShapeOfView
+            android:id="@+id/bottom_triangle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
 
 
-    <com.github.florent37.shapeofview.ShapeOfView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:shape_clip_drawable="@drawable/ic_vectorpaint_two"
-       >
+            android:layout_marginBottom="20dp"
+            android:layout_marginEnd="20dp"
 
-        <ImageView
-            android:layout_width="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="40dp"
+            android:rotation="1"
+
+
+            app:shape_clip_drawable="@drawable/ic_triangle_left">
+
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:scaleType="centerCrop"
+
+                app:srcCompat="@drawable/friends" />
+
+
+        </com.github.florent37.shapeofview.ShapeOfView>
+
+
+        <com.github.florent37.shapeofview.ShapeOfView
+            android:id="@+id/lowest_triangle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_margin="20dp"
+
+            android:adjustViewBounds="true"
+
+
+            android:rotation="180"
+            android:visibility="visible"
+            app:shape_clip_drawable="@drawable/ic_triangle_left">
+
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:foregroundGravity="bottom"
+                android:rotation="180"
+                android:scaleType="centerCrop"
+
+                android:src="@drawable/friends" />
+
+
+        </com.github.florent37.shapeofview.ShapeOfView>
+    </RelativeLayout>
+
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="20"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/title_welcome_screen"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:text="Group share with Friends"
+            android:textColor="@android:color/black"
+            android:textSize="30sp" />
 
-            app:srcCompat="@drawable/decoded" />
+        <TextView
+            android:id="@+id/subtitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:text="Add People to your group and start saving" />
 
-    </com.github.florent37.shapeofview.ShapeOfView>
+        <TextView
+            android:id="@+id/subtitle1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:text="collectively" />
 
-</RelativeLayout>
+
+    </LinearLayout>
+
+
+</LinearLayout>
