--- a/app/src/main/res/layout/activities/layout/activity_profile_setup.xml
+++ b/app/src/main/res/layout/activities/layout/activity_profile_setup.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,32 +9,66 @@
     tools:context=".ProfileSetupActivity">
 
     <android.support.v4.view.ViewPager
-        android:fitsSystemWindows="true"
         android:id="@+id/intro_silder_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1" />
-
-
-    <Button
-        android:id="@+id/next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:background="@null"
-        android:text="@string/next"
-        android:textColor="@android:color/white" />
-
+        android:fitsSystemWindows="true" />
 
 
     <me.relex.circleindicator.CircleIndicator
         android:id="@+id/circulator_indicator"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/next"
-        android:minHeight="12dp"
-        app:ci_drawable="@drawable/black_radius_square"
+        android:layout_height="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="30dp"
+        android:minHeight="20dp"
         app:ci_animator="@animator/indicator_animator"
-        app:ci_animator_reverse="@animator/indicator_animator_reverse"/>
+        app:ci_animator_reverse="@animator/indicator_animator_reverse"
+        app:ci_drawable="@drawable/black_radius_square" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/circulator_indicator"
+        android:orientation="horizontal"
+        android:weightSum="100">
+
+        <top.defaults.view.TextButton
+            android:id="@+id/welcome_screen_sign_up"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="50"
+            android:text="     Sign up   "
+            android:padding="4dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            app:defaultTextColor="@color/primaryGreen"
+            app:pressedTextColor="@android:color/darker_gray"
+            app:disabledTextColor="@android:color/darker_gray"
+            app:underline="true"
+
+
+            />
+
+
+        <top.defaults.view.TextButton
+            android:id="@+id/welcome_screen_sign_in"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="50"
+            android:text="    Sign in    "
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            android:padding="4dp"
+            android:textSize="20sp"
+            app:defaultTextColor="@color/primaryGreen"
+            app:pressedTextColor="@android:color/darker_gray"
+            app:disabledTextColor="@android:color/darker_gray"
+            app:underline="true"
+
+            app:textEffect="animateColor"
+           />
+    </LinearLayout>
 </RelativeLayout>
