--- a/app/src/main/res/layout/activities/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/activities/layout/fragment_user_profile.xml
@@ -19,22 +19,34 @@
         app:shape_arc_height="40dp"
         app:shape_arc_position="bottom">
 
-        <RelativeLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:id="@+id/imageView"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:scaleType="centerCrop"
-                android:src="@android:color/white" />
+                android:src="@android:color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
             <com.github.florent37.shapeofview.shapes.CircleView
                 android:id="@+id/circleView_user_profile"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:layout_centerInParent="true"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView"
+                app:layout_constraintEnd_toEndOf="@+id/imageView"
+                app:layout_constraintStart_toStartOf="@+id/imageView"
+                app:layout_constraintTop_toTopOf="@+id/imageView"
                 app:shape_circle_borderWidth="2dp">
 
                 <ImageView
@@ -46,43 +58,24 @@
             </com.github.florent37.shapeofview.shapes.CircleView>
 
 
-            <com.github.florent37.shapeofview.shapes.CircleView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginBottom="139dp"
-
-                android:layout_marginEnd="126dp"
-                android:background="@android:color/white"
-                app:shape_circle_borderColor="@android:color/white"
-                app:shape_circle_borderWidth="2dp">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="2dp"
-                    android:background="@android:color/holo_red_dark"
-
-                    android:padding="4dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/ic_edit" />
-
-            </com.github.florent37.shapeofview.shapes.CircleView>
-
-
             <custom.RobotoTextView
                 android:id="@+id/user_profile_textView_User_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/circleView_user_profile"
+                android:layout_marginBottom="29dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:text="@string/user_name"
                 android:textAlignment="center"
                 android:textColor="@color/cardview_dark_background"
-                android:textSize="30sp" />
+                android:textSize="30sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/circleView_user_profile" />
 
-        </RelativeLayout>
+        </android.support.constraint.ConstraintLayout>
 
     </com.github.florent37.shapeofview.shapes.ArcView>
 
